# PEA_1

./: Algorithm.h  Application.cpp  Application.h  BranchAndBound.cpp  BranchAndBound.h  BruteForce.cpp  BruteForce.h  CMakeLists.txt  DynamicProgramming.cpp  DynamicProgramming.h  FileHandler.cpp  FileHandler.h  Genetic.cpp  Genetic.h  MatrixGraph.cpp  MatrixGraph.h  TabuSearch.cpp  TabuSearch.h  Test.cpp  Test.h  main.cpp
results/: test-BB.txt  test-BruteForce.txt  test-DP.txt
